deprecated/second_tests/new_falcon_test-error.txt
.env: line 1: HUGGING_FACE_HUB_TOKEN: command not found
/scratch/mjd9571/conda/envs_dirs/juypter/lib/python3.11/site-packages/transformers/models/auto/tokenization_auto.py:809: FutureWarning: The `use_auth_token` argument is deprecated and will be removed in v5 of Transformers. Please use `token` instead.
  warnings.warn(
Loading checkpoint shards:   0%|          | 0/9 [00:00<?, ?it/s]Loading checkpoint shards:  11%|█         | 1/9 [00:11<01:33, 11.69s/it]Loading checkpoint shards:  22%|██▏       | 2/9 [00:23<01:21, 11.69s/it]Loading checkpoint shards:  33%|███▎      | 3/9 [00:35<01:10, 11.75s/it]Loading checkpoint shards:  44%|████▍     | 4/9 [00:47<00:58, 11.78s/it]Loading checkpoint shards:  56%|█████▌    | 5/9 [00:58<00:47, 11.84s/it]Loading checkpoint shards:  67%|██████▋   | 6/9 [01:10<00:35, 11.82s/it]Loading checkpoint shards:  78%|███████▊  | 7/9 [01:22<00:23, 11.86s/it]Loading checkpoint shards:  89%|████████▉ | 8/9 [01:37<00:12, 12.87s/it]Loading checkpoint shards: 100%|██████████| 9/9 [01:49<00:00, 12.56s/it]Loading checkpoint shards: 100%|██████████| 9/9 [01:49<00:00, 12.18s/it]
Traceback (most recent call last):
  File "/scratch/mjd9571/VentureAI/falcon_model.py", line 261, in <module>
    itineraries = generate_itinerary(
                  ^^^^^^^^^^^^^^^^^^^
  File "/scratch/mjd9571/VentureAI/falcon_model.py", line 228, in generate_itinerary
    matched_cities = identify_cities_in_input(user_input, city_data)
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/scratch/mjd9571/VentureAI/falcon_model.py", line 103, in identify_cities_in_input
    match = re.search(r"'''[^']+''' is in ([^,]+), ([^\.]+)\.", revision_text)
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/scratch/mjd9571/conda/envs_dirs/juypter/lib/python3.11/re/__init__.py", line 176, in search
    return _compile(pattern, flags).search(string)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: expected string or bytes-like object, got 'dict'
